# wired-logic-rs

./: .gitignore  1.bootstrap.js  Cargo.toml  LICENSE  README.md  bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
.github/workflows/: building.yml  bundle.yml  deployment.yml  wasm-pack.yml
src/: app.rs  lib.rs  main.rs  wired_logic.rs
src/wired_logic/: mod.rs  parser.rs  render.rs
www/: index.css  index.html  index.js  package-lock.json  package.json  webpack.config.js
www/src/: index.css  index.html  index.js
