[package]
name = "wired-rs"
version = "0.1.2"
authors = ["iostapyshyn"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.2"
imageproc = "0.19.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = "0.1.1"

wasm-bindgen = "0.2"
js-sys = "0.3.37"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
