[package]
name = "wired-logic-rs"
version = "0.1.2"
authors = ["iostapyshyn"]
edition = "2018"
description = "A pixel-based digital circuitry simulator powered by Rust and WebAssembly."
license = "MIT"
repository = "https://github.com/iostapyshyn/wired-logic-rs/"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["console_error_panic_hook"]

[dependencies]
image = "0.23.3"
imageproc = "0.20.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

wasm-bindgen = "0.2"
js-sys = "0.3.37"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = "fat"
